<resources>
    <string name="app_name">Motus</string>
    <string name="sign_out">Sign Out</string>

    //Profile Screen Variables
    <string name="Username">Your Name</string>
    <string name="Email">YourEmail@somethingmail.com</string>

    <string name="text_username">Name:</string>
    <string name="text_email">Email:</string>
    <string name="button_text_change_information">Edit Profile</string>
    <string name="button_text_confirm_change">Confirm changes</string>

    <string name="text_input_email">BernieSander@4Prez.usa</string>
    <string name="text_input_username">Bernie Sanders</string>


    //Measuring variables
    <string name="text_start_measuring">Start Measuring</string>
    <string name="button_text_start">Start</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_change_password"></string>
    <string name="value" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="send_data">Send Data</string>
    <string name="data">Data:</string>
    <string name="show_data">Show Data</string>
    <string name="add_data">Add Data</string>
    <string name="dummydatashowactivity">DummyDataShowActivity</string>
    <string name="disclaimer">Click on the device you wish to connect to. If you cannot see the correct device or are unsure which device is yours, try closing the app and pairing your devices in the bluetooth settings on your device.</string>
    <string name="status">Status:</string>
    <string name="bluetooth_status"><![CDATA[<Bluetooth Status>]]></string>
    <string name="getdataactivity">getDataActivity</string>
    <string name="get_data">Get Data</string>

    //injury variables
    <string-array name="category">
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Forearm</item>
    </string-array>

</resources>
