<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileInfo">

    <TextView
        android:id="@+id/text_username"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Profile_Picture"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="9mm"
        android:layout_marginLeft="9mm"
        android:layout_marginTop="7mm"
        android:text="@string/text_username" />

    <TextView
        android:id="@+id/text_input_username"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Profile_Picture"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="7mm"
        android:layout_toEndOf="@+id/text_username"
        android:layout_toRightOf="@+id/text_username"
        android:background="@drawable/blackborder"
        android:text="@string/text_input_username" />

    <Button
        android:id="@+id/button_edit_username"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/Profile_Picture"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="7mm"
        android:layout_marginEnd="13mm"
        android:layout_marginRight="13mm"
        android:layout_toEndOf="@+id/text_input_username"
        android:layout_toRightOf="@+id/text_input_username" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="9mm"
        android:layout_marginLeft="9mm"
        android:layout_marginTop="7mm"
        android:text="@string/text_email" />


    <TextView
        android:id="@+id/text_input_email"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_input_username"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="7mm"
        android:layout_toEndOf="@+id/text_email"
        android:layout_toRightOf="@+id/text_email"
        android:background="@drawable/blackborder"
        android:text="@string/text_input_email" />


    <Button
        android:id="@+id/button_edit_email"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/button_edit_username"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7mm"
        android:layout_marginEnd="13mm"
        android:layout_marginRight="13mm"
        android:layout_toEndOf="@+id/text_input_email"
        android:layout_toRightOf="@+id/text_input_email" />


    <Button
        android:id="@+id/button_change_password"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_below="@+id/text_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5mm"
        android:text="@string/button_text_change_password" />

    <ImageView
        android:id="@+id/Profile_Picture"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7mm"
        android:layout_weight="1"
        android:src="@mipmap/standardprofilepicture" />

</RelativeLayout>