<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_profile_screen"
    android:orientation="vertical">


    <LinearLayout
        android:background="@drawable/profilescreen_backgroundcolor"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"

            android:scaleX="8"
            android:scaleY="8"
            android:src="@drawable/ic_person_black_24dp"
            android:background="@color/White"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_marginTop="15dp">
            <ImageView
                android:id="@+id/editable_profile_picture"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_person_outline_black_24dp"/>
            <EditText
                android:id="@+id/editable_username"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"

                android:textStyle="bold"
                android:hint="@string/Username"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <EditText
                android:id="@+id/editable_email"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"

                android:textStyle="bold"
                android:hint="@string/Email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="change password"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/button_confirm_changed_userdata"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/White"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"

            android:text="@string/button_text_confirm_change">

        </Button>
        <Button
            android:id="@+id/button_cancel_changed_userdata"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/White"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"

            android:text="@string/button_text_cancel">

        </Button>
    </LinearLayout>

</LinearLayout>